# MPCC

./: .gitignore  README.md  acados_ocp_nlp.json  acados_ocp_nlp1.json  install.sh
C++/: 123.cpp  CMakeLists.txt  README.md  config.h  install.sh  output_file  types.h
C++/ADCodeGen/: CMakeLists.txt
C++/Constraints/: bounds.cpp  constraints.h
C++/Interfaces/: acados_interface.cpp  acados_interface.h  hpipm_interface.h  solver_interface.h
C++/MPC/: mpc.cpp  mpc.h  mpc_old.h
C++/Model/: model.h
C++/Params/: config.json  cost.json  model.json
C++/Params/tracks/: FSG.json  FSG_nirajbasnet.json  FSI.json  competitions.json  constrictor.json  garden.json  hairpins.json  mess.json  peanut.json  rand.json  rectangle.json  small.json  thin.json
C++/Plotting/: plotting.h
C++/c_generated_code/: CMakeCache.txt  CMakeLists.txt  Makefile  acados_mex_create_acados_mpcc.c  acados_mex_create_acados_mpcc.mexa64  acados_mex_free_acados_mpcc.c  acados_mex_free_acados_mpcc.mexa64  acados_mex_set_acados_mpcc.c  acados_mex_set_acados_mpcc.mexa64  acados_mex_solve_acados_mpcc.c  acados_mex_solve_acados_mpcc.mexa64  acados_mpcc_mex_solver.m  acados_sim_solver_acados_mpcc.c  acados_sim_solver_acados_mpcc.h  acados_sim_solver_sfunction_acados_mpcc.c  acados_solver_acados_mpcc.c  acados_solver_acados_mpcc.h  acados_solver_sfunction_acados_mpcc.c  cmake_install.cmake  main_acados_mpcc.c  main_mex_acados_mpcc.c  main_sim_acados_mpcc.c  make_main_mex_acados_mpcc.m  make_mex_acados_mpcc.m  make_sfun.m  make_sfun_sim.m
C++/c_generated_code/acados_mpcc_constraints/: acados_mpcc_constr_h_fun.c  acados_mpcc_constr_h_fun_jac_uxt_zt.c  acados_mpcc_constr_h_fun_jac_uxt_zt_hess.c  acados_mpcc_constraints.h
C++/c_generated_code/acados_mpcc_cost/: acados_mpcc_cost.h  acados_mpcc_cost_ext_cost_0_fun.c  acados_mpcc_cost_ext_cost_0_fun_jac.c  acados_mpcc_cost_ext_cost_0_fun_jac_hess.c  acados_mpcc_cost_ext_cost_e_fun.c  acados_mpcc_cost_ext_cost_e_fun_jac.c  acados_mpcc_cost_ext_cost_e_fun_jac_hess.c  acados_mpcc_cost_ext_cost_fun.c  acados_mpcc_cost_ext_cost_fun_jac.c  (+1 more)
Matlab/: env.sh  (+15 more)
(+98 files in other folders)
